syntax = "proto3";

package secret;

message SecretMetaBackend {
  bytes value = 1;
}

message VaultTokenAuth {
  string token = 1;
}

message VaultAppRoleAuth {
  string role_id = 1;
  string secret_id = 2;
}

message SecretHashicorpVaultBackend {
  string addr = 1;
  string path = 2;
  string field = 3; // default "value"
  oneof auth {
    VaultTokenAuth token_auth = 4;
    VaultAppRoleAuth approle_auth = 5;
  }
  bool tls_skip_verify = 6; // default false
}

message Secret {
  // the message is stored in meta as encrypted bytes and is interpreted as bytes by catalog
  oneof secret_backend {
    SecretMetaBackend meta = 1;
    SecretHashicorpVaultBackend hashicorp_vault = 2;
  }
}

message SecretRef {
  enum RefAsType {
    UNSPECIFIED = 0;
    TEXT = 1;
    // AS FILE
    FILE = 2;
  }
  uint32 secret_id = 1;
  RefAsType ref_as = 2;
}
